--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,13 @@ go:
   - "1.5.x"
   - "1.4.x"
   - "1.3.x"
+
+
+before_install:
+- go get -t -v ./...
+
+script:
+- go test -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
